--- a/Game1/Game1.vcxproj
+++ b/Game1/Game1.vcxproj
@@ -45,7 +45,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(SolutionDir)\base_materials\include</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -68,14 +68,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cell.cpp" />
+    <ClCompile Include="Point.cpp" />
+    <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\base_materials\include\tilelib.h" />
-    <ClInclude Include="Cell.h" />
+    <ClInclude Include="Point.h" />
+    <ClInclude Include="Tile.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="stdafx.h" />
