--- a/Game1/Game1.vcxproj
+++ b/Game1/Game1.vcxproj
@@ -73,6 +73,7 @@
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="TileLibrary.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\base_materials\include\tilelib.h" />
@@ -81,6 +82,7 @@
     <ClInclude Include="Character.h" />
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="TileLibrary.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
